--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -30,9 +30,16 @@ p {
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
+ 	.col-md-6, .col-md-12 {
+ 		float: left;
+ 		border: 1px solid green;
+ 	}
 
-}
-
-@media (max-width: 767px) {
-
+ 	.col-md-6 {
+ 		width: 50%;
+ 	}
+	
+	.col-md-12 {
+ 		width: 100%;
+ 	}
 }
