--- a/module2-solution/css/styles.css
+++ b/module2-solution/css/styles.css
@@ -1,5 +1,6 @@
+/********** Base styles **********/
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 h1 {
@@ -7,36 +8,67 @@ h1 {
   text-align: center;
 }
 
-/*p {
+section {
   border: 1px solid black;
-  background-color: #A52A2A;
+  background-color: #808080;
   width: 90%;
-  height: 150px;
+  height: 200px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   font-family: Helvetica;
-  color: white;
+  color: black;
+  overflow: auto;
 }
-*/
+
+section > div {
+	border: 1px solid black;
+	padding: 5px;
+	float: right;
+	width: 150px;
+	text-align: center;
+}
+
+p {
+	text-align: justify;
+	clear: right;
+	padding: 10px;
+}
+
+#chicken {
+	background-color: #cc0000;
+	color: white;
+}
+
+#beef {
+	background-color: #00cc00;
+	color: white;
+}
+
+#sushi {
+	background-color: #0000cc;
+	color: white;
+}
+
 .row {
-	width: 100%;
+  width: 100%;
 }
 
 @media (min-width: 992px) {
-	.col-lg-4 {
-		float: left;
-		width: 33.33%;
-	}
+  .col-lg-4 {
+  	float: left;
+    width: 33.33%;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
- 	.col-md-6 {
- 		float: left;
- 		width: 50%;
- 	}
-	
-	.col-md-12 {
-		float: left;
- 		width: 100%;
- 	}
+  .col-md-6 {
+  	float: left;
+    width: 50%;
+  }
+  .col-md-12 {
+  	float: left;
+    width: 100%;
+  }
 }
