--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,22 +1,65 @@
-body {
-  font-size: 16px;
-  color: #fff;
-  background-color: #61122f;
-  font-family: 'Oxygen', sans-serif;
+/********** Base styles **********/
+* {
+  box-sizing: border-box;
 }
 
-/** HEADER **/
+h1 {
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+section {
+  border: 1px solid black;
+  background-color: #808080;
+  width: 90%;
+  height: 200px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-family: Helvetica;
+  color: black;
+  overflow: auto;
+}
+
+section > div {
+  border: 1px solid black;
+  padding: 5px;
+  float: right;
+  width: 150px;
+  text-align: center;
+}
+
+p {
+  text-align: justify;
+  clear: right;
+  padding: 10px;
+}
+
+#chicken {
+  background-color: #cc0000;
+  color: white;
+}
+
+#beef {
+  background-color: #00cc00;
+  color: white;
+}
+
+#sushi {
+  background-color: #0000cc;
+  color: white;
+}
+
+.row {
+  width: 100%;
+}
+
 #header-nav {
-  background-color: #f6b319;
+  background-color: #808080;
   border-radius: 0;
   border: 0;
-}
-
-#logo-img {
-  background: url('../images/restaurant-logo_large.png') no-repeat;
-  width: 150px;
-  height: 150px;
-  margin: 10px 15px 10px 0;
+  font-size: 24px;
 }
 
 .navbar-brand {
@@ -25,7 +68,6 @@ body {
 
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Lora', serif;
-  color: #557c3e;
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
@@ -47,12 +89,21 @@ body {
   vertical-align: middle;
 }
 
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid black;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+  margin-top: -30px;
+}
+
 #nav-list {
   margin-top: 10px;
+  margin-bottom: 10px;
 }
 #nav-list a {
-  color: #951C49;
   text-align: center;
+  color: black;
 }
 #nav-list a:hover {
   background: #E7E7E7;
@@ -61,92 +112,33 @@ body {
   font-size: 1.8em;
 }
 
-#phone {
-  margin-top: 5px;
-}
-#phone a { /* Phone number */
-  text-align: right;
-  padding-bottom: 0;
-}
-#phone div { /* We Deliver */
-  color: #557c3e;
-  text-align: right;
-  padding-right: 15px;
+nav a {
+  text-decoration: none;
+  color: black;
 }
 
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid #61122f;
-}
-.navbar-header button.navbar-toggle {
-  clear: both;
-  margin-top: -30px;
-}
-/* END HEADER */
-
-/********** Large devices only **********/
-@media (min-width: 1200px) {
-
+nav ul {
+  list-style: none;
 }
 
-/********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  /* Header */
-  #logo-img {
-    background: url('../images/restaurant-logo_medium.png') no-repeat;
-    width: 100px;
-    height: 100px;
-    margin: 5px 5px 5px 0;
+a > h1 {
+  text-align: left;
+}
+
+@media (min-width: 992px) {
+  .col-lg-4 {
+    float: left;
+    width: 33.33%;
   }
-  /* End Header */
 }
 
-/********** Small devices only **********/
 @media (min-width: 768px) and (max-width: 991px) {
-
-}
-
-/********** Extra small devices only **********/
-@media (max-width: 767px) {
-  /* Header */
-  .navbar-brand {
-    padding-top: 10px;
-    height: 80px;
+  .col-md-6 {
+    float: left;
+    width: 50%;
   }
-  .navbar-brand h1 { /* Restaurant name */
-    padding-top: 10px;
-    font-size: 5vw; /* 1vw = 1% of viewport width */
+  .col-md-12 {
+    float: left;
+    width: 100%;
   }
-  .navbar-brand p { /* Kosher cert */
-    font-size: .6em;
-    margin-top: 12px;
-  }
-  .navbar-brand p img { /* Star-K */
-    height: 20px;
-  }
-
-  #collapsable-nav a { /* Collapsed nav menu text */
-    font-size: 1.2em;
-  }
-  #collapsable-nav a span { /* Collapsed nav menu glyph */
-    font-size: 1em;
-    margin-right: 5px;
-  }
-
-  #call-btn > a {
-    font-size: 1.5em;
-    display: block;
-    margin: 0 20px;
-    padding: 10px;
-    border: 2px solid #fff;
-    background-color: #f6b319;
-    color: #951c49;
-  }
-  #xs-deliver {
-    margin-top: 5px;
-    font-size: .7em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-  }
-  /* End Header */
-
 }
