--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -5,7 +5,6 @@
 
 h1 {
   margin-bottom: 15px;
-  text-align: center;
 }
 
 section {
@@ -34,6 +33,10 @@ p {
   text-align: justify;
   clear: right;
   padding: 10px;
+}
+
+#tall {
+  height: 700px;
 }
 
 #chicken {
@@ -98,12 +101,13 @@ p {
 }
 
 #nav-list {
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 2px;
+  margin-bottom: 2px;
 }
 #nav-list a {
-  text-align: center;
   color: black;
+  background-color: white;
+  border: 1px solid black;
 }
 #nav-list a:hover {
   background: #E7E7E7;
@@ -126,17 +130,13 @@ a > h1 {
 }
 
 @media (min-width: 992px) {
-  .col-lg-4 {
+  .col-lg-12 {
     float: left;
-    width: 33.33%;
+    width: 100%;
   }
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-6 {
-    float: left;
-    width: 50%;
-  }
   .col-md-12 {
     float: left;
     width: 100%;
