--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -77,7 +77,7 @@ p {
   text-shadow: 1px 1px 1px #222;
   margin-top: 0;
   margin-bottom: 0;
-  line-height: .75;
+  line-height: 0;
 }
 .navbar-brand a:hover, .navbar-brand a:focus {
   text-decoration: none;
